# mpv-webengine-overlay-qt

./: .gitignore  .gitmodules  README.md
example_qt5/: CMakeLists.txt  main.cpp  minimal.qml
example_qt5_opengl/: CMakeLists.txt  Main.qml  main.cpp  minimal.qml
example_qt6/: CMakeLists.txt  Main.qml  main.cpp  mpvitem.cpp
example_qt6_artifacts/: CMakeLists.txt  README.md  main.cpp  minimal.qml
example_qt6_hdr_wayland/: CMakeLists.txt  Main.qml  main.cpp
example_qt6_minimal_migration/: main.cpp
example_qt6_mpv_only/: CMakeLists.txt  main.cpp  minimal.qml
example_qt6_nested_wayland/: CMakeLists.txt  Main.qml  main.cpp
example_qt6_opengl/: CMakeLists.txt  Main.qml  main.cpp  mpvitem.cpp  mpvitem.h
example_qt6_vulkan/: CMakeLists.txt  Main.qml  main.cpp  mpvitem.cpp  mpvitem.h
example_qt6_with_webengine_broken/: CMakeLists.txt  main.cpp  minimal.qml
